#7289 Signature Pad - Introduce an option to upload a signature to a specified storage Fixes #7289

--- a/packages/survey-angular-ui/src/questions/signature.component.html
+++ b/packages/survey-angular-ui/src/questions/signature.component.html
@@ -20,4 +20,9 @@
       [size]="'auto'" sv-ng-svg-icon></svg>
   </button>
 </div>
+<ng-container *ngIf="model.showLoadingIndicator">
+  <div [class]="model.cssClasses.loadingIndicator">
+    <sv-ng-loading-indicator></sv-ng-loading-indicator>
+  </div>
+</ng-container>
 </div>
