Fixed https://github.com/surveyjs/service/issues/1698 - Logo position in Basic is not changing unless there is a survey title

--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -17,6 +17,10 @@
   gap: calcSize(4);
   box-shadow: 0px 2px 0px $primary;
 
+  .sd-logo.sv-logo--right {
+    margin-left: auto;
+  }
+
   .sd-logo__image {
     margin-top: calcSize(1);
   }
