Fix different logo markup

--- a/packages/survey-angular-ui/src/components/survey-header/logo-image.component.html
+++ b/packages/survey-angular-ui/src/components/survey-header/logo-image.component.html
@@ -1,12 +1,14 @@
 <ng-template #template>
-  <img
-  [class]="survey.css.logoImage"
-  [attr.src]="survey.locLogo.renderedHtml | safeUrl"
-  [style.width]="survey.renderedStyleLogoWidth"
-  [style.height]="survey.renderedStyleLogoHeight"
-  [attr.width]="survey.renderedLogoWidth"
-  [attr.height]="survey.renderedLogoHeight"
-  [attr.alt]="survey.locTitle.renderedHtml"
-  [style.objectFit]="survey.logoFit"
-  />
+  <div [class]="survey.logoClassNames">
+    <img
+    [class]="survey.css.logoImage"
+    [attr.src]="survey.locLogo.renderedHtml | safeUrl"
+    [style.width]="survey.renderedStyleLogoWidth"
+    [style.height]="survey.renderedStyleLogoHeight"
+    [attr.width]="survey.renderedLogoWidth"
+    [attr.height]="survey.renderedLogoHeight"
+    [attr.alt]="survey.locTitle.renderedHtml"
+    [style.objectFit]="survey.logoFit"
+    />
+  </div>
 </ng-template>
