--- a/src/defaultV2-theme/blocks/sd-context-btn.scss
+++ b/src/defaultV2-theme/blocks/sd-context-btn.scss
@@ -10,6 +10,7 @@
   }
 
   svg {
+    @include useEditorFontSize;
     display: block;
     width: multiply(1.5, $font-editorfont-size);
     height: multiply(1.5, $font-editorfont-size);
