--- a/src/defaultV2-theme/blocks/sd-tagbox.scss
+++ b/src/defaultV2-theme/blocks/sd-tagbox.scss
@@ -13,6 +13,7 @@
 }
 
 .sd-tagbox_clean-button {
+  @include useEditorFontSize;
   height: multiply(1.5, $font-editorfont-size);
   padding: multiply(0.5, $font-editorfont-size);
   margin: auto 0;
@@ -57,6 +58,7 @@
 }
 
 .sd-tagbox-item_clean-button-svg {
+  @include useEditorFontSize;
   display: block;
   padding: multiply(0.25, $font-editorfont-size);
   width: multiply(1, $font-editorfont-size);
@@ -131,6 +133,7 @@
 }
 
 .sd-dropdown__hint-suffix.sd-tagbox__hint-suffix {
+  @include useEditorFontSize;
   line-height: multiply(1.5, $font-editorfont-size);
   height: 100%;
   display: flex;
@@ -138,6 +141,7 @@
 }
 
 .sd-dropdown__hint-prefix.sd-tagbox__hint-prefix {
+  @include useEditorFontSize;
   line-height: multiply(1.5, $font-editorfont-size);
   height: 100%;
   display: flex;
