--- a/src/defaultV2-theme/blocks/sd-input.scss
+++ b/src/defaultV2-theme/blocks/sd-input.scss
@@ -1,4 +1,5 @@
 .sd-input {
+  @include useEditorFontSize;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -74,6 +75,7 @@ textarea {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .sd-text__character-counter:focus-within {
   padding-inline-end: calcSize(8);
 }
@@ -126,6 +128,7 @@ textarea {
 .sd-input[type="email"],
 .sd-input[type="color"],
 .sd-input[type="range"] {
+  @include useEditorFontSize;
   box-sizing: content-box;
   width: calc(100% - 4 * #{$base-unit});
   height: multiply(1.5, $font-editorfont-size);
