--- a/src/defaultV2-theme/variables.scss
+++ b/src/defaultV2-theme/variables.scss
@@ -103,8 +103,14 @@ $font-editorfont-weight: var(--sjs-font-editorfont-weight, 400);
 $font-editorfont-color: var(--sjs-font-editorfont-color, var(--sjs-general-forecolor, rgba(0, 0, 0, 0.91)));
 $font-editorfont-placeholdercolor: var(--sjs-font-editorfont-placeholdercolor, var(--sjs-general-forecolor-light, var(--foreground-light, #909090)));
 $font-default-editorfont-size: var(--sjs-font-editorfont-size, $font-size);
-$font-editorfont-size: var(--sjs-mobile-font-editorfont-size, #{$font-default-editorfont-size});
 $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
+
+//call  @include useEditorFontSize before using this variable;
+$font-editorfont-size: var(--sjs-internal-font-editorfont-size);
+
+@mixin useEditorFontSize {
+  --sjs-internal-font-editorfont-size: var(--sjs-mobile-font-editorfont-size, #{$font-default-editorfont-size});
+}
 
 @function multiply($a, $b) {
   @if $a ==1 {
