--- a/src/defaultV2-theme/blocks/sd-imagepicker.scss
+++ b/src/defaultV2-theme/blocks/sd-imagepicker.scss
@@ -61,6 +61,7 @@
 }
 
 .sd-imagepicker__check-icon {
+  @include useEditorFontSize;
   display: block;
   width: multiply(1.5, $font-editorfont-size);
   height: multiply(1.5, $font-editorfont-size);
@@ -96,6 +97,7 @@
 }
 
 .sd-imagepicker__text {
+  @include useEditorFontSize;
   font-size: $font-editorfont-size;
   line-height: multiply(1.5, $font-editorfont-size);
   margin-top: calcSize(1);
