#7443 Signature Pad - Uploading to a Storage - Unexpected behavior on an attempt to submit a survey without sending a signature to the server first Fixes #7443

--- a/src/knockout/templates/question-signaturepad.html
+++ b/src/knockout/templates/question-signaturepad.html
@@ -8,7 +8,7 @@
             <!-- ko if: question.backgroundImage -->
             <img data-bind="attr: { src: question.backgroundImage}, style: { width: question.renderedCanvasWidth }, css: question.cssClasses.backgroundImage">
             <!-- /ko -->
-            <canvas tabindex='0' data-bind="css: question.cssClasses.canvas, event: { blur: question.onBlur }" ></canvas>
+            <canvas tabindex='0' data-bind="css: question.cssClasses.canvas, event: { blur: question.koOnBlur }" ></canvas>
         </div>
         <!-- ko if: question.canShowClearButton -->
         <div data-bind="css: question.cssClasses.controls">
