#7440 WAVE Alert (Level A and Level AA) - Skipped heading level because a survey title uses H5 and survey description uses H3 - The H4 tag is missing Fixes #7440

--- a/packages/survey-angular-ui/src/components/header/header-mobile.component.html
+++ b/packages/survey-angular-ui/src/components/header/header-mobile.component.html
@@ -10,7 +10,7 @@
       <sv-ng-element-title [element]="model.survey"></sv-ng-element-title>
     </div>
     <div *ngIf="model.survey.renderedHasDescription" class="sv-header__description" [style]="{ maxWidth: model.textAreaWidth }">
-      <h5 *ngIf="model.survey.renderedHasDescription" [class]="model.survey.css.description" [model]="model.survey.locDescription" sv-ng-string></h5>
+      <div *ngIf="model.survey.renderedHasDescription" [class]="model.survey.css.description" [model]="model.survey.locDescription" sv-ng-string></div>
     </div>
   </div>
 </ng-template>
