--- a/src/knockout/templates/question-checkbox.html
+++ b/src/knockout/templates/question-checkbox.html
@@ -50,10 +50,10 @@
   <div role="presentation" data-bind="css: question.getItemClass($data)">
       <label data-bind="css: question.getLabelClass($data)">
           <!-- ko if: $data == question.selectAllItem -->
-          <input type="checkbox" role="option" value="" data-bind="attr: {name: question.name + value, id: question.getItemId($data)}, checked: question.koAllSelected, enable: question.getItemEnabled($data), css: question.cssClasses.itemControl"/>
+          <input type="checkbox" role="option" value="" data-bind="attr: {name: question.name + id, id: question.getItemId($data)}, checked: question.koAllSelected, enable: question.getItemEnabled($data), css: question.cssClasses.itemControl"/>
           <!-- /ko -->
           <!-- ko if: $data != question.selectAllItem -->
-          <input type="checkbox" role="option" data-bind="attr: {name: question.name + value, id: question.getItemId($data)}, checkedValue: $data.value, checked: question.koValue, enable: question.getItemEnabled($data), css: question.cssClasses.itemControl"/>
+          <input type="checkbox" role="option" data-bind="attr: {name: question.name + id, id: question.getItemId($data)}, checkedValue: $data.value, checked: question.koValue, enable: question.getItemEnabled($data), css: question.cssClasses.itemControl"/>
           <!-- /ko -->
               <!-- ko if: question.cssClasses.materialDecorator -->
               <span data-bind="css: question.cssClasses.materialDecorator">
