--- a/src/knockout/templates/question-checkbox.html
+++ b/src/knockout/templates/question-checkbox.html
@@ -49,21 +49,16 @@
 <script type="text/html" id="survey-checkbox-item">
   <div role="presentation" data-bind="css: question.getItemClass($data)">
       <label data-bind="css: question.getLabelClass($data)">
-          <!-- ko if: $data == question.selectAllItem -->
-          <input type="checkbox" role="option" value="" data-bind="attr: {name: question.name + value, id: question.getItemId($data)}, checked: question.koAllSelected, enable: question.getItemEnabled($data), css: question.cssClasses.itemControl"/>
+          <input type="checkbox" role="option" data-bind="attr: {name: question.name + id, id: question.getItemId($data)}, value: $data.value, checked: question.isItemSelected($data), event: { change: (i, e) => { question.clickItemHandler($data, e.target.checked); } }, enable: question.getItemEnabled($data), css: question.cssClasses.itemControl"/>
+          <!-- ko if: question.cssClasses.materialDecorator -->
+          <span data-bind="css: question.cssClasses.materialDecorator">
+            <!-- ko if: question.itemSvgIcon -->
+            <svg data-bind="css:question.cssClasses.itemDecorator">
+              <use data-bind="attr:{'xlink:href':question.itemSvgIcon}" xlink:href=''></use>
+            </svg>
+            <!-- /ko -->
+          </span>
           <!-- /ko -->
-          <!-- ko if: $data != question.selectAllItem -->
-          <input type="checkbox" role="option" data-bind="attr: {name: question.name + value, id: question.getItemId($data)}, checkedValue: $data.value, checked: question.koValue, enable: question.getItemEnabled($data), css: question.cssClasses.itemControl"/>
-          <!-- /ko -->
-              <!-- ko if: question.cssClasses.materialDecorator -->
-              <span data-bind="css: question.cssClasses.materialDecorator">
-                <!-- ko if: question.itemSvgIcon -->
-                <svg data-bind="css:question.cssClasses.itemDecorator">
-                  <use data-bind="attr:{'xlink:href':question.itemSvgIcon}" xlink:href=''></use>
-                </svg>
-                <!-- /ko -->
-              </span>
-              <!-- /ko -->
           <!-- ko if: !$data.hideCaption -->
           <span data-bind="css: question.cssClasses.controlLabel">
           <!-- ko template: { name: 'survey-string', data: $data.locText } -->
