--- a/src/common-styles/window.scss
+++ b/src/common-styles/window.scss
@@ -9,34 +9,15 @@
   border: 1px solid $border-inside;
   background-clip: padding-box;
   z-index: 100;
+  position: relative;
 }
 
 .sv_window_title {
-  padding: 8px 14px;
-  margin: 0;
-  font-size: calcFontSize(0.875);
-  background-color: #f7f7f7;
-  border-bottom: 1px solid #ebebeb;
-  border-radius: calcCornerRadius(1) calcCornerRadius(1) 0 0;
   display: flex;
+  background-color: $background;
+  padding: 0 8px;
 }
 
-.sv_window_content {
-  padding: 0;
-  margin: 0;
-  max-height: 80vh;
-  overflow-y: auto;
-}
-
-.sv_window_title a,
-.sv_window_title a:link,
-.sv_window_title a:visited {
-  text-decoration: none;
-  font-size: calcFontSize(0.875);
-  font-style: normal;
-  color: black;
-}
-
-.sv_window_button .sv-svg-icon {
-  margin: 4px;
+.sv_window_button {
+    position: absolute;
 }
