--- a/src/common-styles/window.scss
+++ b/src/common-styles/window.scss
@@ -9,7 +9,6 @@
   border: 1px solid $border-inside;
   background-clip: padding-box;
   z-index: 100;
-  position: relative;
 }
 
 .sv_window_title {
@@ -18,6 +17,8 @@
   padding: 0 8px;
 }
 
-.sv_window_button {
+.sv_window_buttons_container {
     position: absolute;
+    top: 8px;
+    right: 8px;
 }
