--- a/src/knockout/templates/window.html
+++ b/src/knockout/templates/window.html
@@ -1,20 +1,22 @@
 ﻿<div data-bind="css: cssRoot, style:{width: renderedWidth, maxWidth: renderedWidth}">
     <div data-bind="css: cssHeaderRoot">
-        
-        <span data-bind="click:doExpand">
+
+        <div data-bind="click:doExpand">
             <span data-bind="css: cssHeaderTitle, text: locTitle.koRenderedHtml"></span>
             <span aria-hidden="true" data-bind="css: cssButton"></span>
-        </span>
+        </div>
 
-        <span data-bind="visible:isExpanded, click:doExpand, css: cssHeaderButton">
-            <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-collapsedetail', size: '16' } } --><!-- /ko -->
-        </span>
-        <!-- ko if: allowClose -->
-        
-        <span data-bind="click:doHide, css: cssHeaderButton">
-        <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-expanddetail', size: '16' } } --><!-- /ko -->
-        </span>
-        <!-- /ko -->
+        <div>
+            <span data-bind="visible:isExpanded, click:doExpand, css: cssHeaderButton">
+                <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-collapsedetail', size: '16' } } --><!-- /ko -->
+            </span>
+            <!-- ko if: allowClose -->
+            
+            <span data-bind="click:doHide, css: cssHeaderButton">
+            <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-expanddetail', size: '16' } } --><!-- /ko -->
+            </span>
+            <!-- /ko -->
+        </div>
     </div>
     <div data-bind="visible:isExpanded, css: cssBody, event: { scroll: $data.onScroll }">
         <survey params="survey: survey"></survey>
