--- a/src/common-styles/window.scss
+++ b/src/common-styles/window.scss
@@ -11,14 +11,68 @@
   z-index: 100;
 }
 
-.sv_window_title {
+.sv_window_header {
   display: flex;
   background-color: $background;
   padding: 0 8px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.sv_window_header_title {
+    color: $font-editorfont-color;
+    /* UI / Medium Bold */
+    font-family: Open Sans;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 32px; /* 133.333% */
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.sv_window_header_description{
+    color: $font-questiondescription-color;
+    font-feature-settings: 'salt' on;
+    /* UI/Default */
+    font-family: Open Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .sv_window_buttons_container {
     position: absolute;
     top: 8px;
     right: 8px;
+    display: flex;
+    gap: 8px;
+}
+
+.sv_window_button {
+    display: flex;
+    padding: 8px;
+    justify-content: center;
+    align-items: center;
+
+    svg use {
+        fill: $foreground-dim-light;
+    }
+}
+
+.sv_window_button_close {
+    svg {
+        transform: rotate(45deg);
+    }
+}
+
+.sv_window_content {
+    padding: 24px 8px 0 8px;
 }
