--- a/src/knockout/templates/window.html
+++ b/src/knockout/templates/window.html
@@ -1,20 +1,20 @@
 ﻿<div data-bind="css: cssRoot, style:{width: renderedWidth, maxWidth: renderedWidth}">
-    <div data-bind="css: cssHeaderRoot">
+    <div data-bind="css: cssHeaderRoot, click:doExpand">
+        <!-- ko if: !!locTitle -->  
+        <div data-bind="css: cssHeaderTitle, text: locTitle.koRenderedHtml"></div>
+        <!-- /ko -->
+        <!-- ko if: !!locDescription -->  
+        <div data-bind="css: cssHeaderDescription, text: locDescription.koRenderedHtml"></div>
+        <!-- /ko -->
 
-        <div data-bind="click:doExpand">
-            <span data-bind="css: cssHeaderTitle, text: locTitle.koRenderedHtml"></span>
-            <span aria-hidden="true" data-bind="css: cssButton"></span>
-        </div>
-
-        <div>
-            <span data-bind="visible:isExpanded, click:doExpand, css: cssHeaderButton">
+        <div data-bind="css: cssHeaderButtonsContainer">
+            <div data-bind="visible:isExpanded, click:doExpand, css: cssHeaderCollapseButton">
                 <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-collapsedetail', size: '16' } } --><!-- /ko -->
-            </span>
-            <!-- ko if: allowClose -->
-            
-            <span data-bind="click:doHide, css: cssHeaderButton">
+            </div>
+            <!-- ko if: allowClose -->      
+            <div data-bind="click:doHide, css: cssHeaderCloseButton">
             <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-expanddetail', size: '16' } } --><!-- /ko -->
-            </span>
+            </div>
             <!-- /ko -->
         </div>
     </div>
