--- a/src/defaultV2-theme/blocks/sd-item.scss
+++ b/src/defaultV2-theme/blocks/sd-item.scss
@@ -12,10 +12,15 @@
   height: calcSize(3);
   box-sizing: border-box;
   background-color: $editor-background;
-  box-shadow: $shadow-inner;
   border: none;
   flex-shrink: 0;
   margin-top: calc(calc(multiply(1.5, $font-editorfont-size) - calcSize(3)) / 2);
+  box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.15), 0 0 0 0px $primary;
+  transition: box-shadow 250ms, background 250ms;
+}
+
+.sd-radio__decorator:after {
+  
 }
 
 .sd-item--checked .sd-item__decorator {
@@ -23,10 +28,9 @@
 }
 
 .sd-item__control:focus+.sd-item__decorator {
-  box-shadow: 0 0 0 2px $primary;
   background: $question-background;
   outline: none;
-  @include focusAnimation;
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.15), 0 0 0 2px $primary;
 }
 
 .sd-item--allowhover .sd-selectbase__label:hover .sd-item__decorator {
