--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -82,21 +82,20 @@
 .sd-question__header--location--left {
   display: inline-block;
   width: auto;
-  max-width: 50%;
   vertical-align: top;
-  margin-top: calcSize(1.5);
 }
 
 .sd-question--left {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  gap: calcSize(4);
 }
 
 .sd-question__content--left {
   display: inline-block;
-  padding-left: calcSize(3);
   flex: 1;
+  min-width: calc(50% - 4 * #{$base-unit});
 }
 
 .sd-question__required-text {
