--- a/src/knockout/templates/window.html
+++ b/src/knockout/templates/window.html
@@ -1,8 +1,19 @@
 ﻿<div data-bind="css: cssRoot, style:{width: renderedWidth, maxWidth: renderedWidth}">
-    <div data-bind="css: cssHeaderRoot, click:doExpand">
+    <div data-bind="css: cssHeaderRoot, {cssRootCollapsedMod: isCollapsed}">
+
+        <!-- ko if: isCollapsed && !!locTitle -->  
+        <div data-bind="css: cssHeaderTitleCollapsed, text: locTitle.koRenderedHtml"></div>
+        <!-- /ko -->
+
         <div data-bind="css: cssHeaderButtonsContainer">
-            <div data-bind="visible:isExpanded, click:doExpand, css: cssHeaderCollapseButton">
+            <div data-bind="click:doExpand, css: cssHeaderCollapseButton">
+                <!-- ko if: isExpanded-->  
                 <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-collapsedetail', size: '16' } } --><!-- /ko -->
+                <!-- /ko -->
+                
+                <!-- ko if: isCollapsed-->  
+                <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-collapsedetail', size: '16' } } --><!-- /ko -->
+                <!-- /ko -->
             </div>
             <!-- ko if: allowClose -->      
             <div data-bind="click:doHide, css: cssHeaderCloseButton">
