--- a/src/defaultV2-theme/blocks/sd-expression.scss
+++ b/src/defaultV2-theme/blocks/sd-expression.scss
@@ -4,5 +4,5 @@
 }
 .sd-question__content--left .sd-expression {
   line-height: calcSize(3);
-  margin-top: calcSize(1.5);
+  padding: calcSize(1.5) 0;
 }
