--- a/src/knockout/templates/window.html
+++ b/src/knockout/templates/window.html
@@ -1,28 +1,30 @@
 ﻿<div data-bind="css: cssRoot, style:{width: renderedWidth, maxWidth: renderedWidth}">
-    <div data-bind="css: cssHeaderRoot, {cssRootCollapsedMod: isCollapsed}">
+    <div data-bind="css: cssRootContent">
+        <div data-bind="css: cssHeaderRoot, {cssRootCollapsedMod: isCollapsed}">
 
-        <!-- ko if: isCollapsed && !!locTitle -->  
-        <div data-bind="css: cssHeaderTitleCollapsed, text: locTitle.koRenderedHtml"></div>
-        <!-- /ko -->
-
-        <div data-bind="css: cssHeaderButtonsContainer">
-            <div data-bind="click:doExpand, css: cssHeaderCollapseButton">
-                <!-- ko if: isExpanded-->  
-                <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-collapsedetail', size: '16' } } --><!-- /ko -->
-                <!-- /ko -->
-                
-                <!-- ko if: isCollapsed-->  
-                <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-collapsedetail', size: '16' } } --><!-- /ko -->
-                <!-- /ko -->
-            </div>
-            <!-- ko if: allowClose -->      
-            <div data-bind="click:doHide, css: cssHeaderCloseButton">
-            <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-expanddetail', size: '16' } } --><!-- /ko -->
-            </div>
+            <!-- ko if: isCollapsed && !!locTitle -->  
+            <div data-bind="css: cssHeaderTitleCollapsed, text: locTitle.koRenderedHtml"></div>
             <!-- /ko -->
+    
+            <div data-bind="css: cssHeaderButtonsContainer">
+                <div data-bind="click:doExpand, css: cssHeaderCollapseButton">
+                    <!-- ko if: isExpanded-->  
+                    <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-minimize_16x16', size: '16' } } --><!-- /ko -->
+                    <!-- /ko -->
+                    
+                    <!-- ko if: isCollapsed-->  
+                    <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-restore_16x16', size: '16' } } --><!-- /ko -->
+                    <!-- /ko -->
+                </div>
+                <!-- ko if: allowClose -->      
+                <div data-bind="click:doHide, css: cssHeaderCloseButton">
+                <!-- ko component: { name: 'sv-svg-icon', params: { iconName: 'icon-close_16x16', size: '16' } } --><!-- /ko -->
+                </div>
+                <!-- /ko -->
+            </div>
         </div>
-    </div>
-    <div data-bind="visible:isExpanded, css: cssBody, event: { scroll: $data.onScroll }">
-        <survey params="survey: survey"></survey>
+        <div data-bind="visible:isExpanded, css: cssBody, event: { scroll: $data.onScroll }">
+            <survey params="survey: survey"></survey>
+        </div>
     </div>
 </div>
